generator client {
  provider = "prisma-client-js"
}

// generator dbml {
//   provider = "prisma-dbml-generator"
//   output   = "./erd/schema.dbml"
// }

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum AssetType {
  CARRO
  CAMINHAO
  LANCHA
  MOTO
  MAQUINARIO
}

enum TriggerType {
  KM
  HORAS
  DATA
}

enum AssetStatus {
  DISPONIVEL
  EM_SERVICO
  EM_MANUTENCAO
  PARADO
}

enum WorkOrderStatus {
  ABERTA
  EM_ANDAMENTO
  AGUARDANDO
  CONCLUIDA
  CANCELADA
}

enum WorkOrderPriority {
  BAIXA
  NORMAL
  ALTA
  URGENTE
  CRITICA
}

enum NotificationChannel {
  IN_APP
  PUSH
  EMAIL
}

enum UserRole {
  ADMIN
  GESTOR
  TECNICO
}

enum CalendarEventType {
  PREVENTIVA
  CORRETIVA
  VISTORIA
}

enum CalendarEventStatus {
  PROGRAMADA
  EM_EXECUCAO
  CONCLUIDA
  CANCELADA
}

enum ImportStatus {
  PENDENTE
  PROCESSANDO
  CONCLUIDO
  COM_ERROS
  FALHA
}

model Tenant {
  id        BigInt   @id @default(autoincrement())
  slug      String   @unique
  name      String
  timezone  String   @default("America/Sao_Paulo")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  users  User[]
  roles  Role[]
  assets Asset[]

  @@map("tenants")
}

model User {
  id               BigInt   @id @default(autoincrement())
  tenantId         BigInt
  email            String
  name             String
  passwordHash     String
  refreshTokenHash String?
  isActive         Boolean  @default(true)
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  tenant           Tenant                @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  userRoles        UserRoleMap[]
  auditLogs        AuditLog[]
  notifications    Notification[]
  openedWorkOrders WorkOrder[]           @relation("work_order_opened_by")
  assignments      WorkOrderAssignment[] @relation("work_order_assigned_to")

  @@unique([tenantId, email])
  @@index([tenantId, isActive])
  @@map("users")
}

model Role {
  id        BigInt   @id @default(autoincrement())
  tenantId  BigInt
  code      UserRole
  name      String
  createdAt DateTime @default(now())

  tenant    Tenant        @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  userRoles UserRoleMap[]

  @@unique([tenantId, code])
  @@index([tenantId])
  @@map("roles")
}

model UserRoleMap {
  id         BigInt   @id @default(autoincrement())
  tenantId   BigInt
  userId     BigInt
  roleId     BigInt
  assignedAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  role Role @relation(fields: [roleId], references: [id], onDelete: Cascade)

  @@unique([tenantId, userId, roleId])
  @@index([tenantId, userId])
  @@map("user_roles")
}

model AuditLog {
  id         BigInt   @id @default(autoincrement())
  tenantId   BigInt
  userId     BigInt?
  action     String
  resource   String
  resourceId String?
  payload    Json?
  ipAddress  String?
  userAgent  String?
  createdAt  DateTime @default(now())

  user       User?               @relation(fields: [userId], references: [id], onDelete: SetNull)
  attributes AuditLogAttribute[]

  @@index([tenantId, resource, createdAt])
  @@index([tenantId, userId])
  @@map("audit_logs")
}

model Notification {
  id        BigInt    @id @default(autoincrement())
  tenantId  BigInt
  userId    BigInt
  title     String
  body      String
  isRead    Boolean   @default(false)
  readAt    DateTime?
  createdAt DateTime  @default(now())

  user       User                   @relation(fields: [userId], references: [id], onDelete: Cascade)
  deliveries NotificationDelivery[]

  @@index([tenantId, userId, isRead])
  @@map("notifications")
}

model NotificationDelivery {
  id             BigInt              @id @default(autoincrement())
  tenantId       BigInt
  notificationId BigInt
  channel        NotificationChannel
  status         String
  providerId     String?
  sentAt         DateTime?
  createdAt      DateTime            @default(now())

  notification Notification @relation(fields: [notificationId], references: [id], onDelete: Cascade)

  @@index([tenantId, channel, status])
  @@map("notification_deliveries")
}

model Asset {
  id              BigInt      @id @default(autoincrement())
  tenantId        BigInt
  code            String
  plate           String?
  type            AssetType
  model           String
  manufacturer    String?
  status          AssetStatus @default(DISPONIVEL)
  odometerKm      Float?
  engineHours     Float?
  locationName    String?
  qrCode          String?     @unique
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt

  tenant                Tenant                 @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  statusHistory         AssetStatusHistory[]
  maintenancePlans      MaintenancePlan[]
  maintenanceExecutions MaintenanceExecution[]
  calendarEvents        CalendarEvent[]
  workOrders            WorkOrder[]

  @@unique([tenantId, code])
  @@index([tenantId, type, status])
  @@index([tenantId, plate])
  @@map("assets")
}

model AssetStatusHistory {
  id          BigInt      @id @default(autoincrement())
  tenantId    BigInt
  assetId     BigInt
  status      AssetStatus
  reason      String?
  changedById BigInt?
  createdAt   DateTime    @default(now())

  asset Asset @relation(fields: [assetId], references: [id], onDelete: Cascade)

  @@index([tenantId, assetId, createdAt])
  @@map("asset_status_history")
}

model MaintenancePlan {
  id          BigInt    @id @default(autoincrement())
  tenantId    BigInt
  assetId     BigInt
  title       String
  description String?
  isActive    Boolean   @default(true)
  nextDueAt   DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  asset      Asset                  @relation(fields: [assetId], references: [id], onDelete: Cascade)
  rules      MaintenanceRule[]
  executions MaintenanceExecution[]

  @@index([tenantId, assetId, isActive])
  @@map("maintenance_plans")
}

model MaintenanceRule {
  id            BigInt      @id @default(autoincrement())
  tenantId      BigInt
  planId        BigInt
  triggerType   TriggerType
  intervalValue Float
  warningValue  Float?
  lastValue     Float?
  nextValue     Float?
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt

  plan MaintenancePlan @relation(fields: [planId], references: [id], onDelete: Cascade)

  @@index([tenantId, planId])
  @@map("maintenance_rules")
}

model MaintenanceExecution {
  id          BigInt          @id @default(autoincrement())
  tenantId    BigInt
  planId      BigInt
  assetId     BigInt
  dueAt       DateTime?
  dueValue    Float?
  executedAt  DateTime?
  status      WorkOrderStatus @default(ABERTA)
  workOrderId BigInt?
  createdAt   DateTime        @default(now())

  plan  MaintenancePlan @relation(fields: [planId], references: [id], onDelete: Cascade)
  asset Asset           @relation(fields: [assetId], references: [id], onDelete: Cascade)

  @@index([tenantId, planId, status])
  @@map("maintenance_executions")
}

model CalendarEvent {
  id          BigInt              @id @default(autoincrement())
  tenantId    BigInt
  title       String
  description String?
  type        CalendarEventType
  status      CalendarEventStatus @default(PROGRAMADA)
  startAt     DateTime
  endAt       DateTime?
  assetId     BigInt?
  workOrderId BigInt?
  createdAt   DateTime            @default(now())
  updatedAt   DateTime            @updatedAt

  asset Asset? @relation(fields: [assetId], references: [id], onDelete: SetNull)

  @@index([tenantId, startAt, type])
  @@index([tenantId, status])
  @@map("calendar_events")
}

model WorkOrder {
  id          BigInt            @id @default(autoincrement())
  tenantId    BigInt
  code        String
  assetId     BigInt
  service     String
  description String?
  priority    WorkOrderPriority @default(NORMAL)
  status      WorkOrderStatus   @default(ABERTA)
  dueAt       DateTime?
  openedById  BigInt
  startedAt   DateTime?
  completedAt DateTime?
  createdAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt

  asset         Asset                 @relation(fields: [assetId], references: [id], onDelete: Cascade)
  openedBy      User                  @relation("work_order_opened_by", fields: [openedById], references: [id], onDelete: Restrict)
  tasks         WorkOrderTask[]
  assignments   WorkOrderAssignment[]
  history       WorkOrderHistory[]

  @@unique([tenantId, code])
  @@index([tenantId, status, priority])
  @@index([tenantId, assetId])
  @@map("work_orders")
}

model WorkOrderTask {
  id          BigInt   @id @default(autoincrement())
  tenantId    BigInt
  workOrderId BigInt
  title       String
  isDone      Boolean  @default(false)
  sortOrder   Int      @default(0)
  createdAt   DateTime @default(now())

  workOrder WorkOrder @relation(fields: [workOrderId], references: [id], onDelete: Cascade)

  @@index([tenantId, workOrderId])
  @@map("work_order_tasks")
}

model WorkOrderAssignment {
  id          BigInt   @id @default(autoincrement())
  tenantId    BigInt
  workOrderId BigInt
  userId      BigInt
  assignedAt  DateTime @default(now())

  workOrder WorkOrder @relation(fields: [workOrderId], references: [id], onDelete: Cascade)
  user      User      @relation("work_order_assigned_to", fields: [userId], references: [id], onDelete: Restrict)

  @@unique([tenantId, workOrderId, userId])
  @@index([tenantId, userId])
  @@map("work_order_assignments")
}

model WorkOrderHistory {
  id          BigInt           @id @default(autoincrement())
  tenantId    BigInt
  workOrderId BigInt
  fromStatus  WorkOrderStatus?
  toStatus    WorkOrderStatus
  note        String?
  createdById BigInt?
  createdAt   DateTime         @default(now())

  workOrder WorkOrder @relation(fields: [workOrderId], references: [id], onDelete: Cascade)

  @@index([tenantId, workOrderId, createdAt])
  @@map("work_order_history")
}

model ImportJob {
  id          BigInt       @id @default(autoincrement())
  tenantId    BigInt
  resource    String
  status      ImportStatus @default(PENDENTE)
  totalRows   Int          @default(0)
  successRows Int          @default(0)
  errorRows   Int          @default(0)
  createdById BigInt?
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt

  rows   ImportRow[]
  errors ImportError[]

  @@index([tenantId, resource, status])
  @@map("import_jobs")
}

model ImportRow {
  id          BigInt       @id @default(autoincrement())
  tenantId    BigInt
  importJobId BigInt
  rowNumber   Int
  payload     Json
  status      ImportStatus @default(PENDENTE)
  createdAt   DateTime     @default(now())

  importJob ImportJob        @relation(fields: [importJobId], references: [id], onDelete: Cascade)
  errors    ImportError[]
  fields    ImportRowField[]

  @@index([tenantId, importJobId, rowNumber])
  @@map("import_rows")
}

model ImportError {
  id          BigInt   @id @default(autoincrement())
  tenantId    BigInt
  importJobId BigInt
  importRowId BigInt?
  code        String
  message     String
  createdAt   DateTime @default(now())

  importJob ImportJob  @relation(fields: [importJobId], references: [id], onDelete: Cascade)
  importRow ImportRow? @relation(fields: [importRowId], references: [id], onDelete: SetNull)

  @@index([tenantId, importJobId])
  @@map("import_errors")
}

model AuditLogAttribute {
  id         BigInt   @id @default(autoincrement())
  tenantId   BigInt
  auditLogId BigInt
  key        String
  stringVal  String?
  numberVal  Float?
  boolVal    Boolean?
  createdAt  DateTime @default(now())

  auditLog AuditLog @relation(fields: [auditLogId], references: [id], onDelete: Cascade)

  @@index([tenantId, auditLogId, key])
  @@map("audit_log_attributes")
}

model ImportRowField {
  id          BigInt   @id @default(autoincrement())
  tenantId    BigInt
  importRowId BigInt
  key         String
  stringVal   String?
  numberVal   Float?
  boolVal     Boolean?
  createdAt   DateTime @default(now())

  importRow ImportRow @relation(fields: [importRowId], references: [id], onDelete: Cascade)

  @@index([tenantId, importRowId, key])
  @@map("import_row_fields")
}
